charts/convex/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convex-backend
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: convex.png
    gethomepage.dev/name: Convex
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - convex.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: convex-backend
          namespace: convex
          port: 3210
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: convex-dashboard
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: convex.png
    gethomepage.dev/name: Convex Dashboard
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - convex-dashboard.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: convex-dashboard
          namespace: convex
          port: 6791
